integration symfony task auth project